(fix) Fix cloud scrollbars

--- a/client/assets/style.css
+++ b/client/assets/style.css
@@ -401,11 +401,16 @@ map {
   cursor: pointer; }
 
 .circle, .cloud-1, .cloud-2, .cloud-3 {
+  opacity: 0;
   background-color: turquoise;
   border-radius: 100px;
   height: 175px;
   width: 175px;
-  overflow: hidden; }
+  overflow: hidden;
+  animation-name: fadeIn;
+  animation-duration: 1s;
+  animation-delay: 1s;
+  animation-fill-mode: forwards; }
 
 .cloud-1 {
   position: absolute;
@@ -434,7 +439,7 @@ map {
 .rectangle, .rectangle-1 {
   height: 40px;
   width: 60px;
-  overflow: auto;
+  overflow: hidden;
   position: relative;
   top: 25px;
   left: -60px;
@@ -457,7 +462,7 @@ map {
   font-size: 50px;
   color: darkturquoise;
   animation-name: fadeIn;
-  animation-duration: 2s;
+  animation-duration: 1s;
   animation-delay: 1s;
   animation-fill-mode: forwards; }
 
